<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:forceDarkAllowed="false"
    android:background="@color/deep_blood_red"
    android:padding="0dp"
    tools:targetApi="q">

    <!-- Animated Background Image (Comic Pages) -->
    <ImageView
        android:id="@+id/pageImage"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:contentDescription="@string/marvel_intro_page"
        android:scaleType="fitXY"
        android:src="@drawable/batman_bettings_button"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/transparentImage"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:contentDescription="@string/transparent_overlay"
        android:scaleType="fitXY"
        android:src="@drawable/comic_texture"
        tools:ignore="ImageContrastCheck" />

    <!-- Transparent Image (Added in Front of Everything) -->
    <ImageView
        android:id="@+id/transparentImage2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:alpha=".75"
        android:contentDescription="@string/transparent_overlay"
        android:scaleType="fitXY"
        android:src="@drawable/comicbg"
        tools:ignore="ImageContrastCheck" />

    <!-- Animated Logo -->
    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerInParent="true"
        android:src="@drawable/betman_logonobg"
        android:contentDescription="@string/marvel_logo"
        android:visibility="gone"/>

    <!-- Optional ProgressBar -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>