<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_windowv2"
    tools:context=".Bets">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/casino_header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck">

        <TextView
            android:id="@+id/bets_titletext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:shadowColor="@color/neon_acid_green"
            android:shadowDx="0.0"
            android:shadowDy="0.0"
            android:shadowRadius="15"
            android:text="@string/bets"
            android:textColor="@color/neon_acid_green"
            android:fontFamily="@font/gamerock"
            android:textSize="60sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/bets_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:background="@drawable/border_money"
            android:drawablePadding="8dp"
            android:paddingStart="14dp"
            android:paddingTop="8dp"
            android:paddingEnd="14dp"
            android:paddingBottom="8dp"
            android:shadowColor="@color/gold_rush"
            android:shadowDx="0.0"
            android:shadowDy="0.0"
            android:shadowRadius="10"
            android:text=""
            android:textColor="@color/gold_rush"
            android:textSize="20sp"
            android:fontFamily="@font/quickmoney"
            app:drawableEndCompat="@drawable/image_chips_money"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/deep_blood_red_tlucent"
        android:gravity="center|top"
        android:orientation="vertical"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/casino_header">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bets_casinotitletext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:shadowColor="@color/neon_acid_green"
                android:shadowRadius="5"
                android:text="@string/casino"
                android:textColor="@color/neon_acid_green"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/bets_casinorv"
                android:layout_width="370dp"
                android:layout_height="270dp"
                android:background="@drawable/border_money"
                android:padding="8dp"
                tools:ignore="TextSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bets_othercasinotitletext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:shadowColor="@color/neon_acid_green"
                android:shadowRadius="5"
                android:text="@string/other_casinos"
                android:textColor="@color/neon_acid_green"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/bets_othercasinorv"
                android:layout_width="370dp"
                android:layout_height="270dp"
                android:background="@drawable/border_money"
                android:padding="10dp"
                tools:ignore="TextSizeCheck" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>